--- a/DemandLoading/CMakeLists.txt
+++ b/DemandLoading/CMakeLists.txt
@@ -13,6 +13,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 include(GNUInstallDirs)
 include(BuildConfig)
 include(CTest)
+include(FetchOptiX)
 
 if(NOT TARGET CUDA::cuda_driver)
   find_package( CUDAToolkit 11.1 REQUIRED )
@@ -22,12 +23,6 @@ if ( CUDAToolkit_VERSION VERSION_GREATER_EQUAL 11.2 )
   option( OTK_USE_CUDA_MEMORY_POOLS "Use CUDA memory pools and stream-ordered allocators" ON )
 else()
   option( OTK_USE_CUDA_MEMORY_POOLS "Use CUDA memory pools and stream-ordered allocators" OFF )
-endif()
-
-if(NOT TARGET OptiX::OptiX)
-  # Set OptiX_INSTALL_DIR to the root of the OptiX SDK when configuring CMake.
-  set(OptiX_INSTALL_DIR "OptiX_INSTALL_DIR-NOTFOUND" CACHE PATH "Path to OptiX installed location.")
-  find_package(OptiX 7.3 REQUIRED)
 endif()
 
 option( BUILD_SHARED_LIBS "Build using shared libraries" ON )
