--- a/examples/DemandLoading/DemandGeometryViewer/CMakeLists.txt
+++ b/examples/DemandLoading/DemandGeometryViewer/CMakeLists.txt
@@ -4,12 +4,7 @@
 
 include(BuildConfig)
 include(embed_cuda)
-
-find_package(OptiX 7.5)
-if(NOT OptiX_FOUND OR OPTIX_VERSION VERSION_LESS 7.5)
-  message(WARNING "Cannot build DemandGeometryViewer: it requires OptiX 7.5 or later")
-  return()
-endif()
+include(FetchOptiX)
 
 find_package( CUDAToolkit 11.1 REQUIRED )
 
