--- a/examples/DemandLoading/DemandPbrtScene/CMakeLists.txt
+++ b/examples/DemandLoading/DemandPbrtScene/CMakeLists.txt
@@ -6,15 +6,10 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 include(BuildConfig)
 include(embed_cuda)
+include(FetchOptiX)
 include(SetCxxStandard)
 
 set_cxx_standard(17)
-
-find_package(OptiX 7.5)
-if(NOT OptiX_FOUND OR OPTIX_VERSION VERSION_LESS 7.5)
-    message(WARNING "Cannot build DemandPbrtScene: it requires OptiX 7.5 or greater.")
-    return()
-endif()
 
 find_package(CUDAToolkit 11.1 REQUIRED)
 
